adding some styles

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Speed Test</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Typing Speed Test</h1>
-        <p>Type the text below as fast as you can:</p>
-        <div id="text-to-type" class="text-box"></div>
+        <h1 class="title">Typing</h1>
+        <div id="text-to-type" class="text-box">
+            <p></p>
+        </div>
         <textarea id="user-input" class="text-box" placeholder="Start typing..."></textarea>
-        <button id="submit-btn">Submit</button>
+        <button id="submit-btn">REDO</button>
         <div id="result" class="result-box"></div>
     </div>
     <script src="script.js"></script>
