Adding text to write

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p></p>
         </div>
         <textarea id="user-input" class="text-box" placeholder="Start typing..."></textarea>
-        <button id="submit-btn">REDO</button>
+        <button id="redo-btn">REDO</button>
         <div id="result" class="result-box"></div>
     </div>
     <script src="script.js"></script>
