--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Speed Test</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="index.js"></script>
 </head>
 <body>
     <div class="container">
         <h1 class="title">Typing</h1>
         <div id="text-to-type" class="text-box">
-            <p></p>
+            <p id="text"></p>
         </div>
         <textarea id="user-input" class="text-box" placeholder="Start typing..."></textarea>
-        <button id="redo-btn">REDO</button>
+        <div>
+              <button id="Redo-btn">Redo</button>
+              <button id="Generate-btn">Generate</button>
+        </div>
         <div id="result" class="result-box"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js"></script>   
 </body>
 </html>
