--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 <body>
     <div class="container">
         <h1 class="title">Typing</h1>
+        <div class="stats">
+            <p>WPM: 0</p>
+            <p>Accuracy: 0%</p>
+        </div>
         <div id="text-to-type" class="text-box">
             <p id="text"></p>
         </div>
+
         <textarea id="user-input" class="text-box" placeholder="Start typing..."></textarea>
         <div>
               <button id="Redo-btn">Redo</button>
