--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Typing</h1>
+        <h1 class="title">Typing speed test</h1>
         <div class="stats">
             <p>WPM:  0</p>
             <p>Accuracy:  0%</p>
